--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+autopep8==1.5.2
 beautifulsoup4==4.9.0
 bs4==0.0.1
 certifi==2020.4.5.1
 chardet==3.0.4
+et-xmlfile==1.0.1
 idna==2.9
+jdcal==1.4.1
+openpyxl==3.0.3
+pycodestyle==2.5.0
+PyMySQL==0.9.3
 requests==2.23.0
 soupsieve==2.0
+tqdm==4.46.0
 urllib3==1.25.9
